# zscan-digitalforensic

./: .gitignore  Cargo.toml  README.md  zscan.py  zscan_gui.py
src/: error.rs  lib.rs  main.rs  orchestrator.rs  output.rs
src/collectors/: mod.rs  registry.rs
src/models/: mod.rs
src/utils/: mod.rs
