[package]
name = "zscan"
version = "0.1.0"
edition = "2021"
description = "High-performance Digital Forensics Triage Tool"
authors = ["Zscan Team"]
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI parsing
clap = { version = "4.4", features = ["derive"] }

# Cryptographic hashing
sha2 = "0.10"
digest = "0.10"
hex = "0.4"

# Binary parsing (zero-copy)
nom = "7.1"
binrw = "0.13"

# Directory traversal
walkdir = "2.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# File type detection (magic bytes)
magic = "0.16"

# Cross-platform path handling
dunce = "1.0"

# Concurrent data structures
dashmap = "5.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Windows-specific dependencies (for Registry parsing)
[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[dev-dependencies]
tempfile = "3.9"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
